samples/glossentry/invalid/R16.dita
<?xml version="1.0" encoding="UTF-8"?>
<glossentry>
  <glossterm>Term</glossterm>
  <glossdef>Direct text not in p.</glossdef>
</glossentry>